--- a/style.css
+++ b/style.css
@@ -1,17 +1,166 @@
 /* Alinhamento, espaçamento, larguras e alturas*/
+html, body {
+    margin: 0;
+}
 
-header, main {
-    text-align: center;
+*{
+    box-sizing: border-box;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    
+
+    background-color: whitesmoke;
+}
+
+/* titulos*/
+header h1, main h2 {
+    margin-bottom: 70px;
+}
+
+main h2 span {
+    color: #ff4f4f;
+}
+
+h1, h2 {
+    color: #000000cc;
+}
+
+.logo {
+    width: 150px;
+    margin: 70px 0px;
+} 
+
+header p {
+    margin-top: 24px;
+    font-size: 14px ;
+}
+
+.form h2{
+    text-align: right;
+    color: #ffffffee;
+    font-size: 16px;
+}
+
+/* Alinhamento */
+header, main, footer {
+    text-align: center;   
 
 }
 
+section.form{
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-gap: 45px;
+    align-items: center;
+    background-color: #ff4f4f;
+    border-radius: 16px;
+    padding: 16px 64px;
+
+
+}
+
+/* Form */
+
+form input, form button{
+    width: 100%;
+
+    /* espaçamentos */
+    margin-bottom: 0px;
+    
+
+    /* Bordas */
+
+    padding: 8px 16px;
+
+    border-radius: 4px;
+    border: 1px #ffffff88 solid;   
+}
+form input{
+    background-color: transparent;
+}
+
+form input::placeholder{
+    color: #ffffff88;
+}
+
+form button{
+    font-weight: bolder;
+}
+
+/* limites da pagina */
+header, .form, main {   
+
+    
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto 70px;
+
+    
+}
+
+header button{
+    margin-top: 16px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    background-color: #ff4f4f;
+    color: white;
+
+    font-weight: bold;
+    border: none;
+    
+}
+
+/* Colunas */
 section.donors {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-bottom: 70px;
+   
 }
 
-.form{
-    color: red;
+.blood {
+    color: #ff4f4f;
+    font-weight: bold;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
+
+.blood::before{
+    content: "";
+    background-color: #ff4f4f11;
+    width: 40px;
+    height: 40px;
+
+    position: absolute;
+    border-radius: 50%;
+    border-top-right-radius: 0;
+
+    transform: rotate(-45);
+    
+}
+
+.donnor p{
+    margin-top: 24px;
+    font-size: 14px ;
+}
+
+/* Rodapé */
+footer{
+
+    margin-top: auto;
+    padding: 16px;
+
+    border: 1px solid white;
+}
+
 
 
